app/node/devnet2/public-rpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaspad-public-rpc-lb
  namespace: kaspa
  labels:
    app: devnet2-kaspad
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: devnet2-kaspad
  ports:
    - name: grpc
      protocol: TCP
      port: 16620
      targetPort: grpc
    - name: rpc
      protocol: TCP
      port: 16621
      targetPort: rpc
