app/node/devnet2/ingress-grpc-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kaspad-grpc
  namespace: kaspa
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`devnet2-grpc.kasia.fyi`)
      services:
        - name: devnet2-kaspad-external
          port: 16620
  tls: {}
